--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
+    "@ionic-native/core": "3.4.2",
     "@ionic-native/file": "^3.4.4",
     "@ionic-native/network": "^3.4.4",
     "@ionic-native/sqlite": "^3.4.4",
-    "@ionic/storage": "^1.1.9",
+    "@ionic/storage": "^2.0.1",
+    "chart.js": "^2.6.0",
+    "d3": "^4.8.0",
     "ionic-angular": "2.1.0",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
+    "ng2-charts": "^1.5.0",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.6.26"
